test/revDefLhs1.slq
def f(const x:ğ”¹,y:ğ”¹)â‡’y;
def g[Ï„](const x:Ï„,y:Ï„)â‡’y;

def main(){
	a:=0:ğ”¹;
	c:=1:ğ”¹;
	f(a,b):=c; // error
	x:=0:ğ”¹;
	z:=1:ğ”¹;
	g(x,y):=z; // error
	return (b,y); // TODO
}
